2023-06-03 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add progress bar (closes: #120)
	  - add new '--no-progress' parameter
	  - log some performance data in 'info' log level

2023-05-28 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Use binary search tree to store node's children

2023-05-10 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Handle readlink() errors

2023-04-03 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add another missing lock for tree operations

2023-04-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add missing lock for tree operations during file system scan
	* Use gzread instead of gzgetc

2023-03-12 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Adjust documentation of num_workers config option
	* Require pthread (remove --without-pthread configure option)

2023-03-10 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Adjust log messages about check inode attribute comparison

2023-03-08 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add warning if rules contain not compiled-in attributes (closes: #153)

2023-03-06 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Remove (obsolete) Todo file

2023-03-05 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Remove contrib/ scripts

2023-02-19 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* README: update expiration date of signing key

2023-02-18 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix segfault when using --dry-init

2023-02-14 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix handling of empty growing files

2023-02-06  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Release aide 0.18

2023-02-05 Marc Haber <mh+debian-packages@zugschlus.de>
	* Update aide.conf.5 manual page

2023-01-22 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Update man pages
	* Minor code cleanup
	* Improve some logging

2023-01-21 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Adjust some log messages
	* Add SECURITY.md to EXTRA_DIST
	* Remove mmap support for hashsum calculation