@@ -2,6 +2,7 @@
 	* Add progress bar (closes: #120)
 	  - add new '--no-progress' parameter
 	  - log some performance data in 'info' log level
+	* Remove strerror() calls from thread log messages
 
 2023-05-28 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Use binary search tree to store node's children
